Update openapi description and fix #25
